--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,8 @@
     "chai": "^4.2.0",
     "mocha": "^8.2.1",
     "supertest": "^6.0.1",
-    "supertest-session": "^4.1.0"
+    "supertest-session": "^4.1.0",
+    "nodemon": "^2.0.6"
+    
   }
 }
