--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "web": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
